CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT("DesignPattern")

set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})

# ADD_SUBDIRECTORY(00.FactoryPattern)
# ADD_SUBDIRECTORY(01.Singleton)
# ADD_SUBDIRECTORY(02.FactoryMethodPattern)
# ADD_SUBDIRECTORY(03.AbstractFactory)
# ADD_SUBDIRECTORY(04.Builder)
# ADD_SUBDIRECTORY(05.Prototype)
# ADD_SUBDIRECTORY(06.Adapter)
# ADD_SUBDIRECTORY(07.Bridge)
# ADD_SUBDIRECTORY(08.Composite)
# ADD_SUBDIRECTORY(09.Decorator)
# ADD_SUBDIRECTORY(10.Facade)
# ADD_SUBDIRECTORY(11.Flyweight)
# ADD_SUBDIRECTORY(12.Proxy)
# ADD_SUBDIRECTORY(13.Iterator)
# ADD_SUBDIRECTORY(14.Command)
# ADD_SUBDIRECTORY(15.Visitor)
# ADD_SUBDIRECTORY(16.Chain)
# ADD_SUBDIRECTORY(17.Observer)
# ADD_SUBDIRECTORY(18.Mediator)
# ADD_SUBDIRECTORY(19.State)
# ADD_SUBDIRECTORY(20.Memento)
# ADD_SUBDIRECTORY(21.TemplateMethod)
# ADD_SUBDIRECTORY(22.Strategy)
ADD_SUBDIRECTORY(23.Interpreter)
