CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT("DesignPattern")

set(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR})

ADD_SUBDIRECTORY(01.FactoryPattern)
ADD_SUBDIRECTORY(02.Singleton)
ADD_SUBDIRECTORY(03.FactoryMethodPattern)
ADD_SUBDIRECTORY(04.AbstractFactory)
ADD_SUBDIRECTORY(05.Builder)
ADD_SUBDIRECTORY(06.Prototype)
ADD_SUBDIRECTORY(07.Adapter)
ADD_SUBDIRECTORY(08.Bridge)
ADD_SUBDIRECTORY(09.Composite)
ADD_SUBDIRECTORY(10.Decorator)
ADD_SUBDIRECTORY(11.Facade)
ADD_SUBDIRECTORY(12.Flyweight)
ADD_SUBDIRECTORY(13.Proxy)
ADD_SUBDIRECTORY(14.Iterator)
ADD_SUBDIRECTORY(15.Command)
ADD_SUBDIRECTORY(16.Visitor)
ADD_SUBDIRECTORY(17.Chain)
ADD_SUBDIRECTORY(18.Observer)
ADD_SUBDIRECTORY(19.Mediator)
ADD_SUBDIRECTORY(20.State)
ADD_SUBDIRECTORY(21.Memento)
ADD_SUBDIRECTORY(22.TemplateMethod)
ADD_SUBDIRECTORY(23.Strategy)
ADD_SUBDIRECTORY(24.Interpreter)
