CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(PATTERN_NAME 01.FactoryPattern)

PROJECT(${PATTERN_NAME})

SET(CMAKE_CSS_STANDARD 17)
SET(CMAKE_CSS_FLAGS "-Wall -Wextra")

SET(SRC_FILES 
    main.cpp
    IDrink.cpp
    Factory.cpp
    VendingMachine.cpp
    SimpleVendingMachine.cpp)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    )

ADD_EXECUTABLE(${PATTERN_NAME} ${SRC_FILES})

TARGET_COMPILE_OPTIONS(${PATTERN_NAME} PUBLIC -Wall)

INSTALL(TARGETS ${PATTERN_NAME})
