CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
SET(PATTERN_NAME 04.Builder)

PROJECT(${PATTERN_NAME})

SET(CMAKE_CSS_STANDARD 17)
SET(CMAKE_CSS_FLAGS "-Wall -Wextra")

SET(SRC_FILES 
    main.cpp
    Memory.cpp
    Storage.cpp
    Computer.cpp
    Builder.cpp
    Director.cpp
    )

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/include
    )

ADD_EXECUTABLE(${PATTERN_NAME} ${SRC_FILES})

TARGET_COMPILE_OPTIONS(${PATTERN_NAME} PUBLIC -Wall -Werror)

INSTALL(TARGETS ${PATTERN_NAME})
